# rust-ecom-service

./: .gitignore  Cargo.toml  README.md
api/: Cargo.toml
api/src/: authorize_net.rs  config.rs  ecommerce.rs  email.rs  handler.rs  jwt.rs  lib.rs  model.rs  priveleges.rs  request.rs  response.rs  route.rs  storage.rs
api/src/routes/: auth.rs  content.rs  mod.rs  orders.rs  product.rs
core/: Cargo.toml  README.md
core/src/: config.rs  ecommerce.rs  lib.rs  mutation.rs  query.rs
core/src/payment_processing/: authorize_net.rs  fortis_pay.rs  manager.rs  mod.rs  sandbox.rs  stripe.rs
entity/: Cargo.toml  README.md
entity/src/: account.rs  address.rs  attribute.rs  attribute_option.rs  category.rs  lib.rs  order.rs  order_address.rs  order_attribute.rs  order_item.rs  order_item_attribute.rs  order_note.rs  prelude.rs  product.rs  product_attribute.rs  product_category.rs  product_detail.rs  product_image.rs  static_page.rs  stock.rs
migration/: Cargo.toml  README.md
migration/src/: lib.rs  m20220120_000001_create_preliminary_tables.rs  m20230509_024857_add_product_images.rs  m20230602_183413_expand_products.rs  m20230623_123349_add_orders.rs  m20230704_050932_remap_products_and_orders.rs  m20230711_050108_add_static_posts.rs
plugins/: Cargo.toml
plugins/src/: lib.rs
src/: main.rs
