[package]
name = "lemon-tree"
version = "0.1.0"
edition = "2021"
publish = false

[workspace]
members = [".", "api", "core", "entity", "migration", "plugins"]

[dependencies]
lemon-tree-api = { path = "api" }
lemon-tree-core = { path = "core" }

[features]
authorize_net = ["lemon-tree-core/authorize_net"]
fortis_pay = ["lemon-tree-core/fortis_pay"]
stripe = ["lemon-tree-core/stripe"]
