[package]
name = "rust-ecom-service"
version = "0.1.0"
edition = "2021"
publish = false

[workspace]
members = [".", "api", "core", "entity", "migration", "plugins"]

[dependencies]
rust-ecom-service-api = { path = "api" }
rust-ecom-service-core = { path = "core" }

[features]
authorize_net = ["rust-ecom-service-core/authorize_net"]
fortis_pay = ["rust-ecom-service-core/fortis_pay"]
stripe = ["rust-ecom-service-core/stripe"]
