[package]
name = "lemon-tree-api"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
lemon-tree-core = { path = "../core" }
anyhow = "1.0.66"
argon2 = "0.5.0"
aws-config = "0.55.2"
aws-sdk-sesv2 = "0.27.0"
axum = "0.6.1"
axum-extra = { version = "0.7.4", features = ["cookie"] }
chrono = { version = "0.4.24", features = ["serde"] }
dotenvy = "0.15.6"
entity = { path = "../entity" }
http = "0.2.9"
jsonwebtoken = "8.3.0"
migration = { path = "../migration" }
rust_decimal = { version = "1.29.1", features = ["serde"] }
serde = "1.0.149"
serde_json = "1.0.89"
time = "0.3.20"
tokio = { version = "1.23.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.3.5", features = ["add-extension", "cors", "fs"] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
uuid = { version = "1.3.2", features = ["serde", "v4"] }
