[package]
name = "lemon-tree-api"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
lemon-tree-core = { path = "../core" }
lemon-tree-plugins = { path = "../plugins" }
anyhow = "1.0.66"
argon2 = "0.5.0"
async-stream = "0.3.5"
aws-config = "0.55.2"
aws-sdk-sesv2 = "0.27.0"
aws-sdk-s3 = "0.27.0"
aws-smithy-http = "0.55.2"
axum = { version = "0.6.1", features = ["multipart"] }
axum-extra = { version = "0.7.4", features = ["cookie"] }
chrono = { version = "0.4.24", features = ["serde"] }
dotenvy = "0.15.6"
entity = { path = "../entity" }
futures = "0.3.28"
http = "0.2.9"
image = "0.24.6"
jsonwebtoken = "8.3.0"
migration = { path = "../migration" }
rand = "0.8.5"
reqwest = { version = "0.11.18", features = ["json"] }
rust_decimal = { version = "1.29.1", features = ["serde", "serde-float"] }
serde = "1.0.149"
serde_json = "1.0.89"
time = "0.3.20"
tokio = { version = "1.23.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.3.5", features = ["add-extension", "cors", "fs"] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
uuid = { version = "1.3.2", features = ["serde", "v4"] }
webp = "0.2.2"
