[package]
name = "lemon-tree-core"
version = "0.1.0"
edition = "2021"

[dependencies]
entity = { path = "../entity" }
async-trait = "0.1.71"
chrono = { version = "0.4.24", features = ["serde"] }
http = "0.2.9"
rand = "0.8.5"
reqwest = { version = "0.11.18", features = ["json"] }
rust_decimal = { version = "1.29.1", features = ["serde", "serde-float"] }
serde = "1.0.149"
serde_json = "1.0.89"

[dependencies.sea-orm]
version = "0.11.3"
features = ["debug-print", "runtime-tokio-rustls", "sqlx-postgres"]

[dev-dependencies]
tokio = { version = "1.20.0", features = ["macros", "rt"] }

[features]
mock = ["sea-orm/mock"]
authorize_net = []
fortis_pay = []
stripe = []

[[test]]
name = "mock"
required-features = ["mock"]
