[package]
name = "rust-ecom-service-plugins"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
rust-ecom-service-core = { path = "../core" }
axum = { version = "0.6.1", features = ["multipart"] }
axum-extra = { version = "0.7.4", features = ["cookie"] }
chrono = { version = "0.4.24", features = ["serde"] }
dotenvy = "0.15.6"
entity = { path = "../entity" }
http = "0.2.9"
jsonwebtoken = "8.3.0"
rand = "0.8.5"
rust_decimal = { version = "1.29.1", features = ["serde", "serde-float"] }
serde = "1.0.149"
serde_json = "1.0.89"
time = "0.3.20"
tokio = { version = "1.23.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.3.5", features = ["add-extension", "cors", "fs"] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
uuid = { version = "1.3.2", features = ["serde", "v4"] }
